bdr.BDR2.scala.error
Compilation error:
BDR2:6: error: value forward is not a member of Unit
    case "R" => right() forward()
                        ^BDR2:7: error: value forward is not a member of Unit
    case "L" => left() forward()
                       ^BDR2:8: error: value right is not a member of Unit
    case "I" => right() right() forward()
                        ^